--- a/style.css
+++ b/style.css
@@ -121,7 +121,8 @@ nav .menu {
 
         display: block;
         margin-left: auto;
-        margin-bottom: 30px;        
+        margin-bottom: 30px; 
+      top:-100px;
         z-index: 10;        
     }
 
